--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: lightblue;
+}
 
 #navbarV {
     margin: 0;
@@ -64,4 +67,41 @@ article {
 
 nav {
     display: inline-flex;
+}
+
+h2 {
+    text-align: center;
+    margin: 10px;
+}
+
+img{
+    width: 500px;
+    border: 2px solid black;
+    border-radius: 20px 5px;
+}
+
+hr{
+    background-color: black;
+    color: black;
+    height: 1px;
+}
+
+.btn{
+    background-color: darkblue;
+    color: white;
+    border: 1 solid black;
+    border-radius: 20px 5px;
+}
+
+.btn:hover {
+    background-color: blue;
+    border-radius: 20px 5px;
+    color: white;
+}
+
+form {
+    border: 2px solid black;
+    border-radius: 20px 5px;
+    padding: 10px;
+    margin: 5px;
 }
