--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
 
 article {
     display: inline-block;
+    width: 70%;
 }
 
 nav {
@@ -76,7 +77,7 @@ h2 {
 }
 
 img{
-    width: 500px;
+    width: 200px;
     border: 2px solid black;
     border-radius: 20px 5px;
 }
@@ -105,4 +106,8 @@ form {
     border-radius: 20px 5px;
     padding: 10px;
     margin: 10px;
+}
+
+.photo{
+    float: left;
 }
