--- a/includes/header.html
+++ b/includes/header.html
@@ -7,7 +7,7 @@
             <li><a href="index.php?article=album">Альбом</a></li>
             <li><a href="index.php?article=news">Новости</a></li>
             <li><a href="index.php?article=chat">Чат</a></li>
-            <li><a href="index.php?article=login">LogIn</a></li>
+            <li><a href="login/login.php">LogIn</a></li>
         </ul>
     </heder>
 </html>
