--- a/includes/header.html
+++ b/includes/header.html
@@ -8,6 +8,7 @@
             <li><a href="index.php?article=news">Новости</a></li>
             <li><a href="index.php?article=chat">Чат</a></li>
             <li><a href="login/login.php">LogIn</a></li>
+            <li><a href="admin/">Admin</a></li>
         </ul>
     </heder>
 </html>
