--- a/includes/nav.html
+++ b/includes/nav.html
@@ -7,5 +7,7 @@
             <li><a href="index.php?article=news">Новости</a></li>
             <li><a href="index.php?article=chat">Чат</a></li>
         </ul>
+        <div id="sum"></div>
+        <script src="scripts/summer.js"></script>
     </nav>
 </html>
