--- a/includes/header.html
+++ b/includes/header.html
@@ -5,7 +5,7 @@
         <ul id="navbarH">
             <li><a href="index.php?article=main">Главная</a></li>
             <li><a href="index.php?article=album">Альбом</a></li>
-            <li><a href="index.php?article=news">Новости</a></li>
+            <li><a href="index.php?article=news">Домашнее</a></li>
             <li><a href="index.php?article=chat">Чат</a></li>
             <li><a href="login/login.php">LogIn</a></li>
         </ul>
