--- a/includes/nav.html
+++ b/includes/nav.html
@@ -4,10 +4,10 @@
         <ul id="navbarV">
             <li><a href="index.php?article=main">Главная</a></li>
             <li><a href="index.php?article=album">Альбом</a></li>
-            <li><a href="index.php?article=news">Новости</a></li>
+            <li><a href="index.php?article=news">Домашнее</a></li>
             <li><a href="index.php?article=chat">Чат</a></li>
         </ul>
-        <div id="sum"></div>
-        <script src="scripts/summer.js"></script>
+        <!--<div id="sum"></div>
+        <script src="scripts/summer.js"></script>-->
     </nav>
 </html>
