--- a/login/includes/nav.html
+++ b/login/includes/nav.html
@@ -4,7 +4,7 @@
         <ul id="navbarV">
             <li><a href="../index.php?article=main">Главная</a></li>
             <li><a href="../index.php?article=album">Альбом</a></li>
-            <li><a href="../index.php?article=news">Новости</a></li>
+            <li><a href="../index.php?article=news">Домашнее</a></li>
             <li><a href="../index.php?article=chat">Чат</a></li>
         </ul>
     </nav>
