all falks, code is beautiful (html), protection improved, admin panel is now with other parts of the website, and all is good)))

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <footer>
-        <hr>
-        <i>Copyright &copy; 2016</i>
-        <br>
-        <b>By IMC</b>
-    </footer>
+        <footer>
+            <hr>
+            <i>Copyright &copy; 2016</i>
+            <br>
+            <b>By IMC</b>
+        </footer>
+    </body>
 </html>
