--- a/includes/header.html
+++ b/includes/header.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html>
-    <heder>
-        <h1>10-Б класс СЗСШ№1</h1>
-        <ul id="navbarH">
-            <li><a href="./index.php?article=main">Главная</a></li>
-            <li><a href="./index.php?article=album">Альбом</a></li>
-            <li><a href="./index.php?article=news">Домашнее</a></li>
-            <li><a href="./index.php?article=chat">Чат</a></li>
-            <li><a href="./login/login.php">LogIn</a></li>
-        </ul>
-    </heder>
-</html>
+    
+    <body>
+        <header>
+            <h1>10-Б класс СЗСШ№1</h1>
+            <ul id="navbarH">
+                <li><a href="./index.php?article=main">Главная</a></li>
+                <li><a href="./index.php?article=album">Альбом</a></li>
+                <li><a href="./index.php?article=news">Домашнее</a></li>
+                <li><a href="./index.php?article=chat">Чат</a></li>
+                <li><a href="./login/login.php">LogIn</a></li>
+            </ul>
+        </header>
