--- a/includes/!head.html
+++ b/includes/!head.html
@@ -4,6 +4,6 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
-        <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+        <link href="graphics/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <title>10-Б класс СЗСШ№1</title>
     </head>
