--- a/includes/header.html
+++ b/includes/header.html
@@ -15,6 +15,6 @@
                 <li><a href="./index.php?article=album">Альбом</a></li>
                 <li><a href="./index.php?article=news">Домашнее</a></li>
                 <li><a href="./index.php?article=chat">Чат</a></li>
-                <li><a href="./login/login.php">LogIn</a></li>
+                <li><a href="./index.php?action=login">LogIn</a></li>
             </ul>
         </header>
