--- a/includes/header.html
+++ b/includes/header.html
@@ -16,5 +16,6 @@
                 <li><a href="./index.php?article=news">Домашнее</a></li>
                 <li><a href="./index.php?article=chat">Чат</a></li>
                 <li><a href="./index.php?action=login">Аккаунт</a></li>
+                <li><a href="./index.php?article=journal">Журнал</a></li>
             </ul>
         </header>
