added bootstrap and folder styles, style.css replaced

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: white;
     margin: 8px;
-    background-image: url("graphics/fon.jpg");
+    background-image: url("../graphics/fon.jpg");
 }
 
 #navbarV {
